fix overflowed border bottom radius of #search-container

--- a/CC5-html/booking.css
+++ b/CC5-html/booking.css
@@ -52,6 +52,8 @@ input[name="quantity"],
     padding: 1rem 0;
     background-color: #f7f7f7;
     padding: 15px 50px; 
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 #search-btn {
